atualizei meu exercicio

--- a/exercios/ex022/fundo006.html
+++ b/exercios/ex022/fundo006.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teste de Fundo</title>
+    <title>Fundo</title>
     <style>
         body{
-            height: 100%vh;
+           /* height: 100vh;
             background-color: black;
             background: url('imagens/wallpaper002.jpg'); 
             background-repeat: no-repeat;
             background-position: center center;
+            background-size: cover;
+            background-attachment: fixed; */
+
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat  fixed;
             background-size: cover;
 
         }
@@ -31,6 +35,8 @@
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda magnam repellat excepturi modi illum fugit suscipit. Nesciunt deleniti, odit vero nam quo excepturi nostrum, eos provident reprehenderit itaque eaque fugiat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam nulla dicta quasi natus maiores fuga quis? Molestiae animi odio qui id excepturi, autem quo facere aut quisquam architecto nostrum voluptate. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem dolor odio iure dolore dolorum eius atque quas architecto numquam quia cumque modi aliquid nesciunt, cupiditate obcaecati corrupti, reprehenderit cum ut. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias, consequatur. Perspiciatis voluptates consectetur necessitatibus asperiores sit, dolorum delectus, quae nobis consequuntur suscipit nihil vel fugit possimus harum officia sed totam!
         </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus dignissimos rerum officia soluta maxime labore sint mollitia, ullam neque? Neque eos esse nihil magnam molestiae ducimus pariatur! Mollitia, voluptatum excepturi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti amet mollitia unde nam architecto, sed ipsum consequuntur suscipit nemo aliquam voluptatibus labore delectus omnis. Dolorem expedita quas voluptate consectetur dolor. Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias asperiores harum totam quisquam error distinctio, libero enim aliquam molestias modi, eveniet debitis id, quas voluptatem ducimus explicabo! Iste, saepe cum? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi eius, repudiandae omnis quia architecto aperiam! Consequatur, eos, autem, ad fuga ducimus laboriosam sunt vel non qui ratione labore. Autem, consequatur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto asperiores, dolores ducimus, culpa officia temporibus doloremque pariatur maiores eos ad illo nesciunt. Veritatis, quod magni! Veritatis quaerat ipsam voluptatem temporibus.</p>
+       
     </main>
     
 </body>
