--- a/exercios/ex023/tabela002.html
+++ b/exercios/ex023/tabela002.html
@@ -12,6 +12,7 @@
         table {
             width: 500px;
             border-collapse: collapse;
+            position: relative;
 
         }
         td,th {
@@ -19,21 +20,47 @@
             padding: 10px;
         }
         thead,tfoot {
-            background-color: rgb(255, 104, 104);
-            color: white;
+            background-color: rgb(53, 52, 52);
+            color: white;}
+        
+
+
+            tbody > tr:nth-child(odd) {
+
+                background-color: white;
+            }
+
+        tbody > tr:nth-child(even) {
+            background-color: lightgray;
+
         }
+        thead > tr > th{
+
+            position: sticky;
+            top: -1px;
+            background-color:  rgb(53, 52, 52);
+        }
+
         .num{
             text-align: right;
+        }
+        caption {
+            border: 1px solid black;
+            padding: 10px;
+            font-size: 1.5em;
+            background-color: lightgray;
+            font-weight: bold;
         }
     </style>
 </head>
 <body>
     <h1>Uso de tabelas</h1>
     <table>
+        <caption>População das Unidades Federativas</caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
+                <th scope="col">Estado</th>
+                <th scope="col" style="width: 50px;">População</th>
             </tr>
         </thead>
         <tbody>
@@ -149,7 +176,7 @@
         </tbody>
         <tfoot>
             <tr>
-                <th>Total de Habitantes</th>
+                <th scope="row">Total de Habitantes</th>
                 <td><strong>210.147.125</strong></td>
             </tr>
         </tfoot>
