atualizei meu exercício

--- a/exercios/ex024/iframe003.html
+++ b/exercios/ex024/iframe003.html
@@ -46,7 +46,7 @@
     <p>
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus sed omnis quod nobis, debitis tempore asperiores, repellat facere cumque eveniet explicabo consectetur mollitia? Adipisci laudantium corrupti aut itaque quam laboriosam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere ut voluptate accusantium non dicta rerum obcaecati architecto nulla quaerat iusto, veniam provident sequi qui dolorum necessitatibus doloremque commodi nostrum nemo.
     </p>
-    <iframe name="frame" src="" >
+    <iframe name="frame" srcdoc="<h1>Escolha qualquer uma das três páginas acima</h1><img src='imagens/pexels.jpg'>" >
         <p>Infelizmente seu navegador não é compatível com o nosso conteúdo volte mais tarde</p>
     </iframe>
     <p>
