--- a/exercios/ex025/form001.html
+++ b/exercios/ex025/form001.html
@@ -10,9 +10,15 @@
     <h1>
         Meu primeiro Formulário
     </h1>
-    <form action="">
-        <p>Nome: <input type="text" name="nome" id="nome"></p>
-        <p>Sobrenome: <input type="text" name="sobrenome" id="sobrenome"></p>
+    <form action="cadastro.php" method="post" autocomplete="off">
+        <label for="inome">
+            <p>Nome:
+        </label>
+            <input type="text" name="nome" id="inome"></p>
+        <label for="isobrenome">
+            <p>Sobrenome:
+        </label> 
+            <input type="text" name="sobrenome" id="isobrenome"></p>
         <p><input type="submit" value="Enviar"></p>
     </form>
     
