--- a/exercios/ex026/mq001/index.html
+++ b/exercios/ex026/mq001/index.html
@@ -4,9 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Media Query</title>
+    <link rel="stylesheet" href="estilos/tela.css" media="screen">
+    <link rel="stylesheet" href="estilos/impressora.css" media="print">
 </head>
 <body>
-    
+    <header>
+        <h1>Notícias</h1>
+        <menu>
+            <ul>
+                <li>Esportes</li>
+                <li>Política</li>
+                <li>Tecnologia</li>
+            </ul>
+        </menu>
+    </header>
+    <main>
+        <article>
+            <h2>Estou aprendendo a criar Media Query</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores odio eum ea! Ab aspernatur amet animi officiis quisquam alias soluta sed neque ipsam aperiam ipsa nemo iste explicabo, laudantium quod. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi sapiente officiis eligendi reprehenderit doloribus dolores harum culpa earum? Temporibus impedit aliquam at quisquam neque laboriosam est error nisi voluptates excepturi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod officiis fugiat aspernatur odit sapiente minima ullam? Minus, sunt doloremque asperiores eligendi at a aliquid eaque. Ex, recusandae alias! Non, dolore!
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores odio eum ea! Ab aspernatur amet animi officiis quisquam alias soluta sed neque ipsam aperiam ipsa nemo iste explicabo, laudantium quod. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi sapiente officiis eligendi reprehenderit doloribus dolores harum culpa earum? Temporibus impedit aliquam at quisquam neque laboriosam est error nisi voluptates excepturi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod officiis fugiat aspernatur odit sapiente minima ullam? Minus, sunt doloremque asperiores eligendi at a aliquid eaque. Ex, recusandae alias! Non, dolore!
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores odio eum ea! Ab aspernatur amet animi officiis quisquam alias soluta sed neque ipsam aperiam ipsa nemo iste explicabo, laudantium quod. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi sapiente officiis eligendi reprehenderit doloribus dolores harum culpa earum? Temporibus impedit aliquam at quisquam neque laboriosam est error nisi voluptates excepturi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod officiis fugiat aspernatur odit sapiente minima ullam? Minus, sunt doloremque asperiores eligendi at a aliquid eaque. Ex, recusandae alias! Non, dolore!
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores odio eum ea! Ab aspernatur amet animi officiis quisquam alias soluta sed neque ipsam aperiam ipsa nemo iste explicabo, laudantium quod. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi sapiente officiis eligendi reprehenderit doloribus dolores harum culpa earum? Temporibus impedit aliquam at quisquam neque laboriosam est error nisi voluptates excepturi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod officiis fugiat aspernatur odit sapiente minima ullam? Minus, sunt doloremque asperiores eligendi at a aliquid eaque. Ex, recusandae alias! Non, dolore!
+            </p>
+        </article>
+    </main>
 </body>
 </html>
